moved questions and generateHTML to sep modules to clean up app.js, added some comments and format, added README.md file

--- a/output/team.html
+++ b/output/team.html
@@ -1,89 +1,106 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Main</title>
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-      integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
-      crossorigin="anonymous"
-    />
-  </head>
-  <body>
-    <div class="jumbotron">
-      <h1 class="display-2 text-center">Engineering Team</h1>
+  <html lang="en">
+    <head>
+      <meta charset="UTF-8" />
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+      <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+      <title>Main</title>
+      <link
+        rel="stylesheet"
+        href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+        crossorigin="anonymous"
+      />
+    </head>
+    <body>
+      <div class="jumbotron">
+        <h1 class="display-2 text-center">Engineering Team</h1>
+      </div>
+  
+      <div class="card-deck" style="width: 80rem; margin: auto;">
+    <div class="card bg-dark mb-3" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title text-white text-center">Jordan</h5>
+      <h6 class="card-subtitle mb-2 text-muted text-center">Engineer</h6>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">ID: 34</li>
+        <li class="list-group-item">
+          Email: <a href="#" class="card-link">jordan@jordanmcquiston.com</a>
+        </li>
+        <li class="list-group-item">
+          Github: <a href="https://github.com/JordanCley" class="card-link">JordanCley</a>
+        </li>
+      </ul>
     </div>
-
-    <div class="card-deck" style="width: 80rem; margin: auto;">
-  <div class="card bg-dark mb-3" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title text-white text-center">sdfs</h5>
-    <h6 class="card-subtitle mb-2 text-muted text-center">Engineer</h6>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">ID: dfg</li>
-      <li class="list-group-item">
-        Email: <a href="#" class="card-link">fs</a>
-      </li>
-      <li class="list-group-item">
-        Github: <a href="https://github.com/gsdg" class="card-link">gsdg</a>
-      </li>
-    </ul>
   </div>
-</div>
-
-
-  <div class="card bg-dark mb-3" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title text-white text-center">gfdg</h5>
-    <h6 class="card-subtitle mb-2 text-muted text-center">Intern</h6>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">ID: gdg</li>
-      <li class="list-group-item">
-        Email: <a href="#" class="card-link">gf</a>
-      </li>
-      <li class="list-group-item">
-        School: fgdfg 
-      </li>
-    </ul>
+  
+  
+    <div class="card bg-dark mb-3" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title text-white text-center">Josh</h5>
+      <h6 class="card-subtitle mb-2 text-muted text-center">Engineer</h6>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">ID: 23</li>
+        <li class="list-group-item">
+          Email: <a href="#" class="card-link">1234@456.com</a>
+        </li>
+        <li class="list-group-item">
+          Github: <a href="https://github.com/Josh12" class="card-link">Josh12</a>
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
-
-
-  <div class="card bg-dark mb-3" style="width: 18rem;">
-  <div class="card-body">
-    <h5 class="card-title text-white text-center">kjsdfhfdk</h5>
-    <h6 class="card-subtitle mb-2 text-muted text-center">Manager</h6>
-    <ul class="list-group list-group-flush">
-      <li class="list-group-item">ID: dfs</li>
-      <li class="list-group-item">
-        Email: <a href="#" class="card-link">hfds</a>
-      </li>
-      <li class="list-group-item">
-        Office Number: fsd
-      </li>
-    </ul>
+  
+  
+    <div class="card bg-dark mb-3" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title text-white text-center">Brandon</h5>
+      <h6 class="card-subtitle mb-2 text-muted text-center">Intern</h6>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">ID: 23</li>
+        <li class="list-group-item">
+          Email: <a href="#" class="card-link">brandon@1234.com</a>
+        </li>
+        <li class="list-group-item">
+          School: UCLA 
+        </li>
+      </ul>
+    </div>
   </div>
-</div>
-
-</div>
-
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-      crossorigin="anonymous"
-    ></script>
-    </body>
-    </html>
+  
+  
+    <div class="card bg-dark mb-3" style="width: 18rem;">
+    <div class="card-body">
+      <h5 class="card-title text-white text-center">Jason</h5>
+      <h6 class="card-subtitle mb-2 text-muted text-center">Manager</h6>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item">ID: 89</li>
+        <li class="list-group-item">
+          Email: <a href="#" class="card-link">Jason@gmail.com</a>
+        </li>
+        <li class="list-group-item">
+          Office Number: 435
+        </li>
+      </ul>
+    </div>
+  </div>
+  
+  </div>
+  
+      <script
+        src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"
+      ></script>
+      <script
+        src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"
+      ></script>
+      </body>
+      </html>
